# Calculator

Kalkulator/: CMakeLists.txt  main.cpp
